error.log
101 [t@pop-os:basic-http-server]>> cargo check
   Compiling tokio v1.28.0
    Checking tokio-util v0.7.8
    Checking basic-http-server v0.8.1 (/media/t/External/projects/dev-web/api/basic-http-server)
warning: unused import: `tokio::runtime::Runtime`
  --> src/main.rs:30:5
   |
30 | use tokio::runtime::Runtime;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0599]: the method `map` exists for struct `FramedRead<File, BytesCodec>`, but its trait bounds were not satisfied
   --> src/main.rs:239:25
    |
239 |       let stream = stream.map(|b| b.map(BytesMut::freeze));
    |                           ^^^ method cannot be called on `FramedRead<File, BytesCodec>` due to unsatisfied trait bounds
    |
   ::: /home/t/.cargo/registry/src/github.com-1ecc6299db9ec823/tokio-util-0.7.8/src/codec/framed_read.rs:14:1
    |
14  | / pin_project! {
15  | |     /// A [`Stream`] of messages decoded from an [`AsyncRead`].
16  | |     ///
17  | |     /// [`Stream`]: futures_core::Stream
...   |
22  | |     }
23  | | }
    | | -
    | | |
    | | doesn't satisfy `FramedRead<tokio::fs::File, BytesCodec>: FutureExt`
    | | doesn't satisfy `FramedRead<tokio::fs::File, BytesCodec>: Iterator`
    | | doesn't satisfy `FramedRead<tokio::fs::File, BytesCodec>: StreamExt`
    | |_doesn't satisfy `FramedRead<tokio::fs::File, BytesCodec>: Stream`
    |   doesn't satisfy `_: Future`
    |
    = note: the following trait bounds were not satisfied:
            `FramedRead<tokio::fs::File, BytesCodec>: Stream`
            which is required by `FramedRead<tokio::fs::File, BytesCodec>: StreamExt`
            `FramedRead<tokio::fs::File, BytesCodec>: futures::Future`
            which is required by `FramedRead<tokio::fs::File, BytesCodec>: FutureExt`
            `&FramedRead<tokio::fs::File, BytesCodec>: Stream`
            which is required by `&FramedRead<tokio::fs::File, BytesCodec>: StreamExt`
            `&FramedRead<tokio::fs::File, BytesCodec>: futures::Future`
            which is required by `&FramedRead<tokio::fs::File, BytesCodec>: FutureExt`
            `&mut FramedRead<tokio::fs::File, BytesCodec>: Stream`
            which is required by `&mut FramedRead<tokio::fs::File, BytesCodec>: StreamExt`
            `&mut FramedRead<tokio::fs::File, BytesCodec>: futures::Future`
            which is required by `&mut FramedRead<tokio::fs::File, BytesCodec>: FutureExt`
            `FramedRead<tokio::fs::File, BytesCodec>: Iterator`
            which is required by `&mut FramedRead<tokio::fs::File, BytesCodec>: Iterator`

error[E0599]: the method `filter_map` exists for struct `ReadDir`, but its trait bounds were not satisfied
   --> src/ext.rs:178:23
    |
178 |     let dents = dents.filter_map(|dent| match dent {
    |                       ^^^^^^^^^^ method cannot be called on `ReadDir` due to unsatisfied trait bounds
    |
   ::: /home/t/.cargo/registry/src/github.com-1ecc6299db9ec823/tokio-1.28.0/src/fs/read_dir.rs:65:1
    |
65  | pub struct ReadDir(State);
    | ------------------
    | |
    | doesn't satisfy `tokio::fs::ReadDir: Iterator`
    | doesn't satisfy `tokio::fs::ReadDir: StreamExt`
    | doesn't satisfy `tokio::fs::ReadDir: Stream`
    |
    = note: the following trait bounds were not satisfied:
            `tokio::fs::ReadDir: Stream`
            which is required by `tokio::fs::ReadDir: StreamExt`
            `&tokio::fs::ReadDir: Stream`
            which is required by `&tokio::fs::ReadDir: StreamExt`
            `&mut tokio::fs::ReadDir: Stream`
            which is required by `&mut tokio::fs::ReadDir: StreamExt`
            `tokio::fs::ReadDir: Iterator`
            which is required by `&mut tokio::fs::ReadDir: Iterator`

warning: unused import: `StreamExt`
 --> src/ext.rs:8:23
  |
8 | use futures::{future, StreamExt};
  |                       ^^^^^^^^^

warning: unused import: `futures::stream::StreamExt`
 --> src/main.rs:9:5
  |
9 | use futures::stream::StreamExt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `basic-http-server` (bin "basic-http-server") generated 3 warnings
error: could not compile `basic-http-server` due to 2 previous errors; 3 warnings emitted
